# tallii-backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile.migrations.release  Dockerfile.release  README.md  api_spec.yaml  docker-compose.yml
auth/: Cargo.toml  Dockerfile.release  docker-compose.yml
auth/src/: config.rs  main.rs
http/: api.http  auth.http  events.http  friends.http  groups.http  http-client.env.json  players.http  teams.http  users.http
migrations/: 20200820012132_init.sql  20200820221003_friends.sql
scripts/: run_migrations.sh  start.sh
server/: .env  Cargo.toml  Dockerfile.release
server/migrations/: 20200820012132_init.sql
server/src/: main.rs
src/: config.rs  crypto.rs  errors.rs  generics.rs  main.rs  routes.rs  token.rs
src/db/: invite_code.rs
src/models/: group.rs  group_member.rs  group_user.rs  invite_code.rs  mod.rs  user.rs
src/repositories/: group.rs  group_member.rs  group_user.rs  group_users.rs  invite_code.rs  mod.rs  user.rs
src/services/: auth.rs  group.rs  groups.rs  mod.rs
src/services/events/: db.rs  handlers.rs  mod.rs  models.rs  routes.rs
src/services/events/comments/: db.rs  handlers.rs  models.rs  routes.rs
src/services/events/members/: db.rs  handlers.rs  models.rs  routes.rs
src/services/events/players/: db.rs  handlers.rs  models.rs  routes.rs
src/services/events/teams/: db.rs  handlers.rs  models.rs  routes.rs
src/services/friends/: db.rs  handlers.rs  models.rs  routes.rs
src/services/groups/: db.rs  handlers.rs  members.rs  mod.rs  models.rs
src/services/users/: db.rs  handlers.rs  models.rs  routes.rs
src/services/wagers/: db.rs  handlers.rs  models.rs  routes.rs
