[package]
name = "backend"
version = "0.1.0"
authors = ["adamaho <adam.aho@hey.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.0"
actix-web = "2.0"
actix-web-httpauth = "0.4"
argonautica = { version = "0.2", features = ["simd"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.10"
dotenv = "0.15"
futures = { version = "0.3", features = ["compat"] }
jsonwebtoken = "7"
nanoid = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono" ] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-subscriber = "0.2"