[package]
name = "auth"
version = "0.1.0"
authors = ["adamaho <adam.aho@hey.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10"
dotenv = "0.15"
actix-web = "2.0"
actix-rt = "1.0"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono" ] }